--- a/.github/workflows/deadman-switch.yml
+++ b/.github/workflows/deadman-switch.yml
@@ -3,8 +3,9 @@ name: Deadman Switch
 on:
   workflow_dispatch:
   schedule:
-    # Runs every 2 minutes (cron is always UTC)
-    - cron: "*/2 * * * *"
+    # Runs once per day at 07:00 UTC
+    # (≈1–2 AM Texas depending on DST)
+    - cron: "0 7 * * *"
 
 permissions:
   contents: write
@@ -12,11 +13,12 @@ permissions:
 jobs:
   switch:
     runs-on: ubuntu-latest
+
     env:
-      TZ: America/Chicago   # Texas / Central Time for date logic
+      TZ: America/Chicago
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Decide which index.html should be live
@@ -27,22 +29,22 @@ jobs:
           set -euo pipefail
 
           TODAY="$(date +%F)"
-          CHECKIN="$(tr -d '\r\n' < checkin.txt || true)"
+          CHECKIN=""
 
-          echo "Today (Texas): $TODAY"
-          echo "Check-in date: $CHECKIN"
-
-          if [[ -z "$CHECKIN" ]]; then
-            echo "checkin.txt missing or empty -> publishing secret index."
+          if [[ -f checkin.txt ]]; then
+            CHECKIN="$(tr -d '\r\n' < checkin.txt)"
           fi
 
+          echo "Today (Texas): $TODAY"
+          echo "Check-in date: ${CHECKIN:-<empty>}"
+
           if [[ "$CHECKIN" == "$TODAY" ]]; then
-            echo "✅ Check-in current. Keeping placeholder index."
+            echo "✅ Check-in current. Publishing placeholder."
             cp index.placeholder.html index.html
           else
-            echo "⚠️ Check-in stale. Publishing secret index."
+            echo "⚠️ Check-in stale or missing. Publishing secret index."
             if [[ -z "${SECRET_INDEX_HTML:-}" ]]; then
-              echo "ERROR: SECRET_INDEX_HTML is empty or not set."
+              echo "ERROR: SECRET_INDEX_HTML is not set."
               exit 1
             fi
             printf "%s" "$SECRET_INDEX_HTML" > index.html
